compiler/testData/diagnostics/tests/enum/enumMissingName.kt
// FIR_IDENTICAL
// Error: name should present
enum class<!SYNTAX!><!>(konst rgb : Int) {
    RED(0xFF000),
    GREEN(0x00FF00),
    BLUE(0x0000FF)
}